tests/functional/lang/parse-fail-unexpected-neq.err
error: syntax error, unexpected '!='
       at «stdin»:1:6:
            1| 1 != != 2
             |      ^
            2|
